--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 ---
-layout: home
-author_profile: true
+layout: splash        # 关键！使用飞溅布局
+permalink: /
+header:
+  overlay_image: /assets/images/home-banner.jpg  # 找一张好看的大图做背景
+  overlay_filter: 0.5 # 图片变暗一点，突出文字
+excerpt: "Materials Science / MXene / Coding <br /> 欢迎来到 PERPER 的实验室"
+feature_row:          # 这里开始定义分区
+  - image_path: /assets/images/research-icon.jpg
+    title: "科研项目"
+    excerpt: "关注 MXene 材料在储能领域的应用..."
+    url: "/research/"
+    btn_label: "查看更多"
+    btn_class: "btn--primary"
+  - image_path: /assets/images/life-icon.jpg
+    title: "生活记录"
+    excerpt: "这里有我的摄影和随笔..."
+    url: "/life/"
+    btn_label: "阅读随笔"
+    btn_class: "btn--info"
 ---
