--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ header:
 excerpt: "Materials Science / MXene / Coding <br /> 欢迎来到 PERPER 的实验室"
 feature_row:          # 这里开始定义分区
   - image_path: /assets/images/research-icon.jpg
-    title: "科研项目"
-    excerpt: "关注 MXene 材料在储能领域的应用..."
+    title: "科研学习"
+    excerpt: "关注液态金属LM在柔性器件中的应用."
     url: "/research/"
     btn_label: "查看更多"
     btn_class: "btn--primary"
   - image_path: /assets/images/life-icon.jpg
     title: "生活记录"
-    excerpt: "这里有我的摄影和随笔..."
+    excerpt: "2025高百接力赛华南站"
     url: "/life/"
     btn_label: "阅读随笔"
     btn_class: "btn--info"
