--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
 ---
-layout: splash        # 关键！使用飞溅布局
+layout: splash
 permalink: /
+hidden: true
 header:
-  overlay_image: /assets/images/home-banner.jpg  # 找一张好看的大图做背景
-  overlay_filter: 0.5 # 图片变暗一点，突出文字
+  overlay_color: "#5e616c"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
+  overlay_filter: 0.5       # 如果用图片，这个可以让文字更清晰
 excerpt: "Materials Science / MXene / Coding <br /> 欢迎来到 PERPER 的实验室"
-feature_row:          # 这里开始定义分区
-  - image_path: /assets/images/research-icon.jpg
-    title: "科研学习"
-    excerpt: "关注液态金属LM在柔性器件中的应用."
+
+feature_row_1:
+  - image_path: /assets/avatar.JPG  # 这里先用你的头像做测试，以后可以换成科研相关的图
+    alt: "科研笔记"
+    title: "科研笔记"
+    excerpt: "记录 MXene 材料的合成、表征以及电化学性能测试的实验点滴。"
     url: "/research/"
-    btn_label: "查看更多"
+    btn_label: "查看笔记"
     btn_class: "btn--primary"
-  - image_path: /assets/images/life-icon.jpg
-    title: "生活记录"
-    excerpt: "2025高百接力赛华南站"
-    url: "/life/"
+
+feature_row_2:
+  - image_path: https://images.unsplash.com/photo-1493663284031-b7e3aefcae8e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80
+    alt: "生活随想"
+    title: "生活随想"
+    excerpt: "科研之外的生活记录，摄影、阅读与旅行。"
+    url: "/life/"  # 假设你以后会建这个页面
     btn_label: "阅读随笔"
     btn_class: "btn--info"
+
+feature_row_3:
+  - image_path: https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80
+    alt: "关于我"
+    title: "关于我"
+    excerpt: "了解更多关于我的背景、简历以及联系方式。"
+    url: "/about/"
+    btn_label: "详细介绍"
+    btn_class: "btn--warning"
 ---
+
+{% include feature_row id="feature_row_1" type="left" %}
+
+{% include feature_row id="feature_row_2" type="right" %}
+
+{% include feature_row id="feature_row_3" type="left" %}
