--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ hidden: true
 header:
   overlay_color: "#5e616c"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
   overlay_filter: 0.5       # 如果用图片，这个可以让文字更清晰
-excerpt: "Materials Science / MXene / Coding <br /> 欢迎来到 PERPER 的实验室"
+excerpt: "Materials Science / MXene / Coding <br /> Go out and prectice more"
 
 feature_row_1:
   - image_path: /assets/avatar.JPG  # 这里先用你的头像做测试，以后可以换成科研相关的图
-    alt: "科研笔记"
-    title: "科研笔记"
+    alt: "科研学习"
+    title: "科研学习"
     excerpt: "记录 MXene 材料的合成、表征以及电化学性能测试的实验点滴。"
     url: "/research/"
     btn_label: "查看笔记"
