--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@ feature_row_1:
   - image_path: /assets/avatar.JPG  # 这里先用你的头像做测试，以后可以换成科研相关的图
     alt: "科研学习"
     title: "科研学习"
-    excerpt: "记录 MXene 材料的合成、表征以及电化学性能测试的实验点滴。"
+
     url: "/research/"
     btn_label: "查看笔记"
     btn_class: "btn--primary"
 
 feature_row_2:
   - image_path: https://images.unsplash.com/photo-1493663284031-b7e3aefcae8e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80
-    alt: "生活随想"
-    title: "生活随想"
-    excerpt: "科研之外的生活记录，摄影、阅读与旅行。"
+    alt: "生活记录"
+    title: "生活记录"
+
     url: "/life/"  # 假设你以后会建这个页面
     btn_label: "阅读随笔"
     btn_class: "btn--info"
@@ -30,7 +30,7 @@ feature_row_3:
   - image_path: https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80
     alt: "关于我"
     title: "关于我"
-    excerpt: "了解更多关于我的背景、简历以及联系方式。"
+
     url: "/about/"
     btn_label: "详细介绍"
     btn_class: "btn--warning"
