--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: splash
 permalink: /
-title: "锦鹏个人网站"
+title: "锦鹏的个人网站"
 hidden: true
 header:
   overlay_color: "#5e616c"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
