--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ hidden: true
 header:
   overlay_color: "#5e616c"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
   overlay_filter: 0.5       # 如果用图片，这个可以让文字更清晰
-excerpt: "Chemistry; Materials Science and Engineering <br /> Go out and prectice more"
+excerpt: "<span style='color: #FF4500; font-family: Times New Raman'>Chemistry; Materials Science and Engineering <br /> Go out and prectice more"
 
 feature_row_1:
   - image_path: /assets/avatar.JPG  # 这里先用你的头像做测试，以后可以换成科研相关的图
