--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: splash
 permalink: /
-title: "锦鹏的个人网站"
+title: "<span style='text-shadow: 2px 2px 4px #000000; font-family: Helvetica; font-size: 50px; color: #ffffff;'>锦鹏的个人网站>锦鹏>jin"
 hidden: true
 header:
   overlay_color: "#5e616c"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
   overlay_filter: 0.5       # 如果用图片，这个可以让文字更清晰
-excerpt: "<span style='color: #FF4500; font-family: Times New Roman'>Chemistry; Materials Science and Engineering</span> <br/>
-         <br /> <span style='color: #87CEEB; font-family: Arial'>Go out and prectice more"
+excerpt: " <br/>
+         <br /> <span style='color: #FFD700; font-family: Arial; font size: 31'>Go out and prectice more"
 
 feature_row_1:
   - image_path: /assets/avatar.JPG  # 这里先用你的头像做测试，以后可以换成科研相关的图
