--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: splash
 permalink: /
-title: "<span style='text-shadow: 2px 2px 4px #000000; font-family: Helvetica; font-size: 50px; color: #ffffff;'>锦鹏的个人网站>锦鹏>jin"
+title: "<span style='font-family: Arial; font-size: 50px; color: #ffffff;'>锦鹏的个人网站"
 hidden: true
 header:
   overlay_color: "#5e616c"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
