--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   overlay_color: "#5e616c"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
   overlay_filter: 0.5       # 如果用图片，这个可以让文字更清晰
 excerpt: " <br/>
-         <br /> <span style='color: #FFD700; font-family: Arial; font size: 31'>Go out and prectice more"
+         <br /> <span style='color: #FF4500; font-family: Arial; font size: 31'>Go Out and Prectice More"
 
 feature_row_1:
   - image_path: /assets/avatar.JPG  # 这里先用你的头像做测试，以后可以换成科研相关的图
