--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ permalink: /
 title: "<span style='font-family: Arial; font-size: 50px; color: #ffffff;'>锦鹏的个人网站"
 hidden: true
 header:
-  overlay_color: "#5e616c"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
+  overlay_color: "grey"  # 顶部背景色，也可以换成图片 overlay_image: /assets/home-bg.jpg
   overlay_filter: 0.5       # 如果用图片，这个可以让文字更清晰
 excerpt: " <br /> <span style='color: #FF4500; font-family: Arial; font size: 31'>Go Out and Prectice More"
 
