--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ feature_row_1:
     title: "科研学习"
 
     url: "/research/"
-    btn_label: "查看笔记"
+    btn_label: "enter"
     btn_class: "btn--primary"
 
 feature_row_2:
@@ -23,7 +23,7 @@ feature_row_2:
     title: "生活记录"
 
     url: "/life/"  # 假设你以后会建这个页面
-    btn_label: "阅读随笔"
+    btn_label: "enter"
     btn_class: "btn--info"
 
 feature_row_3:
@@ -32,7 +32,7 @@ feature_row_3:
     title: "关于我"
 
     url: "/about/"
-    btn_label: "详细介绍"
+    btn_label: "enter"
     btn_class: "btn--warning"
 ---
 
