--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ feature_row_2:
     alt: "生活记录"
     title: "生活记录"
 
-    url: "/life/"  # 假设你以后会建这个页面
+    url: "/life/" 
     btn_label: "enter"
     btn_class: "btn--info"
 
